infrastructure/zitadel/postgresql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
---
apiVersion: v1
kind: Service
metadata:
  name: zitadel-postgresql
  namespace: identity
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgresql
  selector:
    app.kubernetes.io/instance: zitadel-postgresql
    app.kubernetes.io/name: postgresql
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: zitadel-postgresql-headless
  namespace: identity
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgresql
  clusterIP: None
  selector:
    app.kubernetes.io/instance: zitadel-postgresql
    app.kubernetes.io/name: postgresql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zitadel-postgresql
  namespace: identity
spec:
  serviceName: zitadel-postgresql-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zitadel-postgresql
      app.kubernetes.io/name: postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zitadel-postgresql
        app.kubernetes.io/name: postgresql
    spec:
      containers:
        - name: postgresql
          image: registry-1.docker.io/bitnami/postgresql:latest
          ports:
            - containerPort: 5432
              name: tcp-postgresql
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: local-path
